--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node-js-crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon dist/server.js",
+    "build" : "tsc"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/uuid": "9.0.7",
+    "nodemon":"^2.0.15",
     "typescript": "^5.3.3"
   }
 }
