--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "nodemon dist/server.js",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
-    "@types/uuid": "9.0.7",
-    "nodemon":"^2.0.15",
+    "@types/uuid": "^9.0.7",
+    "nodemon": "^2.0.15",
     "typescript": "^5.3.3"
   }
 }
