--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "nodemon dist/server.js",
+    "start:dev": "nodemon src/server.js",
+    "start:prod": "npm run build && node dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -20,7 +22,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
-    "nodemon": "^2.0.15",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
