--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon dist/server.js",
     "start:dev": "nodemon src/server.js",
     "start:prod": "npm run build && node dist/server.js",
+    "test": "jest --detectOpenHandles --forceExit",
     "build": "tsc"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cluster": "^0.7.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "uuid": "^9.0.1"
