--- a/package.json
+++ b/package.json
@@ -22,13 +22,20 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
-    "chai": "^4.3.10",
-    "mocha": "^10.2.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "14.x"
+}
 }
