--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon dist/server.js",
     "start:dev": "nodemon src/server.js",
     "start:prod": "npm run build && node dist/server.js",
+    "start:multi": "node server.js",
     "test": "jest --detectOpenHandles --forceExit",
     "build": "tsc"
   },
